Fix unreadable secondary button in light mode

--- a/src/style/variables.less
+++ b/src/style/variables.less
@@ -23,6 +23,7 @@
 	--color-heading: black;
 	--color-link: #673ab8;
 	--color-btn: #673ab8;
+	--color-btn-secondary: #673ab8;
 	--color-btn-background: #eee;
 	--color-hr: #f8f8f8;
 	--color-quote-bg: #ebf6ff;
@@ -57,6 +58,7 @@
 		--color-heading: #c5c5c5;
 		--color-link: #ae80ff;
 		--color-btn: #673ab8;
+		--color-btn-secondary: white;
 		--color-btn-background: #eee;
 		--color-hr: #444;
 		--color-quote-bg: #29475f;
